# seclib-rust

./: .gitignore  .secrets.baseline  Cargo.toml  LICENSE.md  NOTICE  PARIDAD.md  PROMPT_ANTIGRAVITY_RUST.md  README.md  SEGURIDAD_SPEC.md  deny.toml
.github/workflows/: ci.yml
bindings/seclib-py/: Cargo.toml
bindings/seclib-py/src/: lib.rs
crates/seclib-core/: Cargo.toml
crates/seclib-core/src/: auth.rs  authz.rs  config.rs  crypto.rs  files.rs  http.rs  lib.rs  logging.rs  store.rs
crates/seclib-core/src/auth/: issuer.rs  mfa.rs  rate_limit.rs
crates/seclib-core/tests/: parity_tests.rs
infra-base/: compose.yml
infra-base/caddy/: Caddyfile
infra-base/hardening/: hardening_setup.sh
infra-base/secrets/: db_password.txt.example  redis_password.txt.example
server/seclib-server/: Cargo.toml
server/seclib-server/src/: main.rs  rate_limit.rs
