[package]
name = "seclib-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
publish = false

[dependencies]
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "limit"] }
tokio = { version = "1", features = ["full"] }
seclib-core = { path = "../../crates/seclib-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
base64 = "0.22"
subtle = "2"
secrecy = "0.8"
tracing = "0.1"
